--- a/install.txt
+++ b/install.txt
@@ -17,17 +17,21 @@ your sales.
 INSTALLATION
 ---------------------------------------------
 
-1. Copy the files to the root directory of your shop,
+1. Go to https://app.oneall.com/signup/ and create a free account,
 
-2. Go to https://app.oneall.com/signup/ and create a free account,
+2. Setup a new OneAll Site and copy the OneAll API Subdomain and Keys
 
-3. Setup a new OneAll Site,
+3. Download the oneall_social_login.ocmod.zip file
 
-4. Open your OpenCart admin and go to Extensions\Modules\OneAll Social Login,
+4. Open your OpenCart admin and go to Extensions\Installer,
 
-5. Enter your OneAll API Subdomain and Keys,
+5. Upload the zip file,
 
-6. Save your settings.
+2. Go to Extensions\Extensions, select Modules as Extension Type, find OneAll Social Login, click on + green button and click on blue button to edit,
+
+7. Enter your OneAll API Subdomain and Keys and select Enabled as Social Login Status,
+
+8. Save your settings.
 
 Use the "Autodetect Communication Settings" and "Verify API Settings"
 buttons to make sure that the API connection is working properly. 
